--- a/app/src/main/res/layout/content_cadastro_novo.xml
+++ b/app/src/main/res/layout/content_cadastro_novo.xml
@@ -77,14 +77,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextCodigo"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textViewCodigo"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/editTextPreco" />
+        android:layout_alignEnd="@+id/editTextUnidade" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/imageViewFoto"
+        android:src="@drawable/product"
         android:layout_below="@+id/editTextCodigo"
         android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButtonGaleria"
+        android:paddingLeft="10dp"
+        android:background="@null"
+        android:src="@drawable/ic_insert_photo_black_48dp"
+        android:layout_alignBottom="@+id/imageViewFoto"
+        android:layout_toEndOf="@+id/textViewDescricao" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButtonCamera"
+        android:paddingLeft="10dp"
+        android:background="@null"
+        android:src="@drawable/ic_add_a_photo_black_48dp"
+        android:layout_alignBottom="@+id/imageButtonGaleria"
+        android:layout_toEndOf="@+id/imageButtonGaleria" />
+
+
 </RelativeLayout>
