--- a/app/src/main/res/layout/content_editar_produto.xml
+++ b/app/src/main/res/layout/content_editar_produto.xml
@@ -12,4 +12,10 @@
     tools:context="br.com.trainning.pdv.ui.EditarProdutoActivity"
     tools:showIn="@layout/activity_editar_produto">
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
