--- a/app/src/main/res/layout/activity_editar_produto.xml
+++ b/app/src/main/res/layout/activity_editar_produto.xml
@@ -20,9 +20,14 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
     <include layout="@layout/content_editar_produto" />
 
+    |</ScrollView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
