--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,10 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:id="@+id/fotoProduto"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"/>
+
     <TextView
         android:id="@+id/item_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/fotoProduto"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10sp"
         android:text="name"
