--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,9 +7,9 @@
     android:padding="8dp">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:id="@+id/fotoProduto"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"/>
 
     <TextView
