--- a/app/src/main/res/layout/activity_editar_produto.xml
+++ b/app/src/main/res/layout/activity_editar_produto.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.trainning.pdv.ui.EditarProdutoActivity">
+    tools:context="br.com.trainning.pdv_2016.ui.EditarProdutoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,7 +28,8 @@
         >
     <include layout="@layout/content_editar_produto" />
 
-    |</ScrollView>
+    </ScrollView>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
