--- a/app/src/main/res/layout/activity_cadastro_novo.xml
+++ b/app/src/main/res/layout/activity_cadastro_novo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.trainning.pdv.ui.CadastroNovoActivity">
+    tools:context="br.com.trainning.pdv_2016.ui.CadastroNovoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
-        <include layout="@layout/content_cadastro_novo" />
+    <include layout="@layout/content_cadastro_novo" />
 
     </ScrollView>
 
