--- a/app/src/main/res/layout/content_cadastro_novo.xml
+++ b/app/src/main/res/layout/content_cadastro_novo.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.trainning.pdv.ui.CadastroNovoActivity"
+    tools:context="br.com.trainning.pdv_2016.ui.CadastroNovoActivity"
     tools:showIn="@layout/activity_cadastro_novo">
 
     <TextView
@@ -102,10 +102,10 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButtonCamera"
-        android:paddingLeft="10dp"
         android:background="@null"
+        android:paddingLeft="10dp"
         android:src="@drawable/ic_add_a_photo_black_48dp"
+        android:id="@+id/imageButtonCamera"
         android:layout_alignBottom="@+id/imageButtonGaleria"
         android:layout_toEndOf="@+id/imageButtonGaleria" />
 
