--- a/app/src/main/res/layout/content_editar_produto.xml
+++ b/app/src/main/res/layout/content_editar_produto.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.trainning.pdv.ui.EditarProdutoActivity"
+    tools:context="br.com.trainning.pdv_2016.ui.EditarProdutoActivity"
     tools:showIn="@layout/activity_editar_produto">
 
     <Spinner
@@ -22,10 +22,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Descrição"
         android:id="@+id/textViewDescricao"
-        android:layout_marginTop="25dp"
         android:layout_below="@+id/spinner"
         android:layout_alignParentStart="true" />
 
@@ -110,10 +110,10 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButtonCamera"
-        android:paddingLeft="10dp"
         android:background="@null"
+        android:paddingLeft="10dp"
         android:src="@drawable/ic_add_a_photo_black_48dp"
+        android:id="@+id/imageButtonCamera"
         android:layout_alignBottom="@+id/imageButtonGaleria"
         android:layout_toEndOf="@+id/imageButtonGaleria" />
 
